--- a/src/app/features/fms/components/receipt-capture/receipt-capture.component.html
+++ b/src/app/features/fms/components/receipt-capture/receipt-capture.component.html
@@ -118,7 +118,7 @@
       </div>
       <!-- Second Row -->
 
-      <div class="row">
+      <div class="row mt-1">
         <div class="col-md-4">
           <label for="receiptingPoint" class="form-label">{{
             "fms.receipting.receipting_point" | translate
@@ -161,7 +161,7 @@
       </div>
 
       <!-- Third Row -->
-      <div class="row">
+      <div class="row mt-1">
         <div class="col-md-4">
           <label for="receiptDate" class="form-label required">{{
             "fms.receipting.receipt_date" | translate
@@ -206,7 +206,7 @@
       <!-- </div> -->
       <!-- Fourth Row -->
 
-      <div class="row">
+      <div class="row mt-1">
         <div class="col-md-4">
           <label for="manualRef" class="form-label">{{
             "fms.receipting.manual_ref" | translate
@@ -274,7 +274,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-1">
         <div class="col-md-4">
           <div class="form-group">
             <label for="charges" class="form-label">{{
