--- a/src/app/features/fms/components/receipt/receipt.component.html
+++ b/src/app/features/fms/components/receipt/receipt.component.html
@@ -13,7 +13,7 @@
           >
 
           <select
-            class="form-control form-select text-black border-0 fw-medium font-size: 14px;"
+            class="form-select form-select text-black border-0 fw-medium font-size: 14px;"
             id="organization"
             style="width: 67%"
             formControlName="organization"
@@ -21,11 +21,7 @@
           >
             <label for="organization">Select</label>
 
-            <option
-              *ngFor="let org of organization"
-              [value]="org.id"
-              [selected]="org.id === 2"
-            >
+            <option *ngFor="let org of organization" [value]="org.id">
               {{ org.name }}
             </option>
           </select>
@@ -37,18 +33,14 @@
             >{{ "fms.branch" | translate }}:</label
           >
           <select
-            class="form-control form-select text-black border-0 fw-medium font-size: 14px;"
+            class="form-select form-select text-black border-0 fw-medium font-size: 14px;"
             id="branch"
             style="width: 62%"
             formControlName="selectedBranch"
             (change)="onBranchChange($event)"
           >
             <option value="">Select</option>
-            <option
-              *ngFor="let branch of branches"
-              [value]="branch.id"
-              [selected]="branch.id === 1"
-            >
+            <option *ngFor="let branch of branches" [value]="branch.id">
               {{ branch.name }}
             </option>
           </select>
@@ -60,7 +52,7 @@
             >{{ "fms.yr" | translate }}:</label
           >
           <select
-            class="form-control form-select text-black border-0 fw-medium font-size: 14px;"
+            class="form-select form-select text-black border-0 fw-medium font-size: 14px;"
             id="year"
             style="width: 50%"
           >
@@ -77,7 +69,7 @@
             >{{ "fms.period" | translate }}:</label
           >
           <select
-            class="form-control form-select text-black border-0 fw-medium font-size: 14px;"
+            class="form-select form-select text-black border-0 fw-medium font-size: 14px;"
             id="period"
             style="width: 50%"
           >
