3607: Ability to cancel a quote

--- a/src/app/features/gis/components/quotation/components/quotation-conversion/quotation-conversion.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-conversion/quotation-conversion.component.html
@@ -310,7 +310,7 @@
           <br>
 
           <div class="justify-content-end">
-            <button class="btn btn-outline-primary me-2" (click)="mergeQuoteToPolicy()" >{{'gis.quotation.merge_to_policy' | translate}}</button>
+            <button class="btn btn-outline-primary me-2" (click)="mergeQuoteToPolicy()" data-bs-dismiss="modal" >{{'gis.quotation.merge_to_policy' | translate}}</button>
             <button
               class="btn btn-primary"
               data-bs-dismiss="modal"
