--- a/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -147,7 +147,7 @@
                   <p class="label">Status</p>
                 </div>
                 <div class="col-8">
-                  <p class="content">{{quotationView?.quotStatus || "null" }}</p>
+                  <p class="content">{{quotationView?.status || "null" }}</p>
                 </div>
               </div>
             </div>
