--- a/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quote-summary/quote-summary.component.html
@@ -95,12 +95,19 @@
                         <p class="summary-label">{{ 'gis.quotation.expiry_date' | translate }}:</p>
                       </div>
                       <div class="col-7">
-                        <p class="summary-value">{{ coverTo | date: 'MMMM d, yyyy' }}</p>
+                        <p class="summary-value">{{ expiryDate | date: 'MMMM d, yyyy' }}</p>
                       </div>
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <!-- Empty div for alignment -->
+                    <div class="row">
+                      <div class="col-5">
+                        <p class="summary-label">{{'gis.quotation.currency' | translate}}:</p>
+                      </div>
+                      <div class="col-7">
+                        <p class="summary-value">{{quotationDetails?.currency}}</p>
+                      </div>
+                    </div>
                   </div>
                   <div class="col-md-4">
                     <!-- Empty div for alignment -->
@@ -476,15 +483,17 @@
 
         <div class="float-start mt-4 mb-4 ">
             <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#cancelQuote"
-                id="btnCancelQuote">{{'gis.quotation.cancel_quote' | translate}}</button>
+                id="btnCancelQuote" *ngIf="showQuoteActions">{{'gis.quotation.cancel_quote' | translate}}</button>
                 <button type="button" class="btn btn-outline-primary ms-3" data-bs-toggle="modal"
                 data-bs-target="#shareQuote" id="btnCancelQuote" *ngIf="showQuoteActions"> {{'gis.quotation.share_quote' | translate}}</button>
         </div>
-        <div class="float-end mt-4 mb-4" *ngIf="showQuoteActions">
-            <button type="button" class="btn btn-primary me-3" data-bs-toggle="modal" data-bs-target="#convertQuoteToPolicy"
+        <div class="float-end mt-4 mb-4" >
+            <button *ngIf="showQuoteActions" type="button" class="btn btn-primary me-3" data-bs-toggle="modal" data-bs-target="#convertQuoteToPolicy"
                 id="btnConvertPolicy" >{{'gis.quotation.convert_to_policy' | translate}}</button>
-            <button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#convertQuote" >
+            <button *ngIf="showQuoteActions" class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#convertQuote" >
                 {{'gis.quotation.convert_to_normal_quote' | translate}}</button>
+            <button *ngIf="!showQuoteActions" class="btn btn-primary" type="button" [routerLink]="'/home/lms/quotation/list'" [queryParams]="{tab: 'general'}" >
+              Back to dashboard</button>
         </div>
 
        <!-- Convert Quote Modal -->
@@ -520,7 +529,7 @@
                             data-bs-dismiss="modal" (click)="convertToPolicy()">{{'gis.quotation.convert_to_policy' | translate}}</button>
                     </div>
                     <div class="d-flex justify-content-center mb-2">
-                      
+
                     </div>
 
 
@@ -556,27 +565,27 @@
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="6" required [(ngModel)]="reasonCancelled"></textarea>
 
                     <div class="row mt-4 mb-4">
-                        <div class="col-4"></div>
-                        <div class="col-8">
-                            <div class="row">
-                                <div class="col-6 d-flex justify-content-end">
-                                    <button type="button" class="btn btn-outline-primary" id="closeBtn"
-                                        data-bs-dismiss="modal">{{'gis.quotation.close' | translate}}</button>
-                                </div>
-                                <div class="col-6 d-flex justify-content-end">
-                                    <button
-                                      type="button"
-                                      class="btn btn-primary"
-                                      id="cancelQoute"
-                                      [attr.data-bs-dismiss]="reasonCancelled?.trim() ? 'modal' : null"
-                                      (click)="cancelQuote()"
-                                    >
-                                        {{'gis.quotation.cancel_quote' | translate}}
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                      <div class="col-4"></div>
+                      <div class="col-8">
+                          <div class="row">
+                              <div class="col-12 d-flex justify-content-end gap-2">
+                                  <button type="button"
+                                          class="btn btn-outline-primary"
+                                          id="closeBtn"
+                                          data-bs-dismiss="modal">
+                                      {{'gis.quotation.close' | translate}}
+                                  </button>
+                                  <button type="button"
+                                          class="btn btn-primary"
+                                          id="cancelQoute"
+                                          [attr.data-bs-dismiss]="reasonCancelled?.trim() ? 'modal' : null"
+                                          (click)="cancelQuote()">
+                                      {{'gis.quotation.cancel_quote' | translate}}
+                                  </button>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
                 </div>
             </div>
         </div>
@@ -626,7 +635,7 @@
                             [textContent]="selectedOption === 'email' ? 'Email' : 'Phone Number'"></label>
                         <!-- <input id="shareInput" [type]="selectedOption === 'email' ? 'email' : 'tel'" [(ngModel)]="contactValue" class="form-control" /> -->
                         <input id="shareInput" [type]="selectedOption === 'email' ? 'email' : 'tel'"
-                            [(ngModel)]="selectedOption === 'email' ? selectedEmail : selectedPhoneNo"
+                            (ngModel)="selectedOption === 'email' ? selectedEmail : selectedPhoneNo"
                             class="form-control" />
 
                     </div>
