--- a/src/app/features/fms/components/base-fms/base-fms.component.html
+++ b/src/app/features/fms/components/base-fms/base-fms.component.html
@@ -60,7 +60,7 @@
     <div class="card">
       <div class="card-body">
         <div class="row my-3 mx-3">
-          <div class="col-3 mb-3">
+          <div class="col-12 mb-3 col-md-3">
             <div class="card fixed-height-card hover-effect">
               <div class="card-header bg-transparent header">
                 General Ledger
@@ -107,7 +107,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3">
+          <div class="col-12 mb-3 col-md-3">
             <div class="card fixed-height-card hover-effect">
               <div class="card-header bg-transparent">CashBook</div>
               <div class="card-body">
@@ -152,7 +152,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3">
+          <div class="col-12 mb-3 col-md-3">
             <div class="card fixed-height-card hover-effect">
               <div class="card-header bg-transparent">Creditors</div>
               <div class="card-body">
@@ -197,7 +197,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 mb-3">
+          <div class="col-12 mb-3 col-md-3">
             <div class="card fixed-height-card hover-effect">
               <div class="card-header bg-transparent">Debtors</div>
               <div class="card-body">
