--- a/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-comparison/cover-types-comparison.component.html
@@ -358,43 +358,15 @@
         <ng-template pTemplate="body" let-section let-editing="editing" let-i="rowIndex">
           <tr style="height: 40px; padding: 10px; margin-bottom: 10px;">
             <td>
-              <!-- <p-tableCheckbox [value]="section" [(ngModel)]="section.checked"></p-tableCheckbox> -->
-              <input type="checkbox" [checked]="isSectionChecked(section)">
-
+              <input type="checkbox" id="check_section_{{ section.sectionCode }}">
             </td>
             <td>{{ section.sectionShortDescription |sentenceCase }}</td>
-            <!-- <td [pEditableColumn]="section.freeLimit" pEditableColumnField="freeLimit">
-                    <p-cellEditor >
-                      <ng-template pTemplate="input">
-                        <input pInputText [(ngModel)]="section.freeLimit" />
-                      </ng-template>
-                      <ng-template pTemplate="output">
-                        {{ section.freeLimit | number}}
-                      </ng-template>
-                    </p-cellEditor>
-                  </td> -->
-            <td>{{ section.freeLimit }}</td>
-
+            <td>{{ section.freeLimit | number }}</td>
             <td [pEditableColumn]="section.limitAmount" pEditableColumnField="limitAmount">
-              <!-- <input [(ngModel)]="section.limitAmount" class="cellEditorInput"/> -->
-              <input [(ngModel)]="section.limitAmount" class="cellEditorInput" type="text"
-                (keyup)="onKeyUp($event, section)">
-
-              <!-- <input [(ngModel)]="section.freeLimit" (input)="onInputChange(section)" class="cellEditorInput" /> -->
-
-
-              <!-- <p-cellEditor>
-                            <ng-template pTemplate="input">
-                                <input pInputText [(ngModel)]="section.limitAmount" style="border: 2px solid #db3434; outline: none; border-radius: 4px;" />
-                            </ng-template>
-                            <ng-template pTemplate="output">
-                                {{ section.limitAmount | number}}
-                            </ng-template>
-                        </p-cellEditor> -->
+              <input  id="section_{{ section.sectionCode }}" [(ngModel)]="section.limitAmount"
+                       [options]="currencyObj" currencyMask class="cellEditorInput form-control-sm" type="text"
+                (keydown)="onKeyUp($event, section)">
             </td>
-
-
-
           </tr>
         </ng-template>
       </p-table>
